[tool.poetry]
name = "rl-baselines"
version = "0.1.0"
description = "RL baseline algorithms"
authors = ["melikbugra <melikbugraozcelik@gmail.com>"]
license = "MIT LICENSE"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.28.1"
matplotlib = "^3.7.1"
mlflow = "^2.10.0"
numpy = "^1.24.2"
prettytable = "^3.9.0"
torch = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
